set(SOURCES
        TwoNumberSum.cpp
        ValidateSubsequence.cpp
        FindClosestValueInBST.cpp
        BranchSums.cpp
        NodeDepths.cpp
        DepthFirstSearch.cpp
        NthFibonacci.cpp
        ProductSum.cpp
        BinarySearch.cpp
        FindThreeLargestNumbers.cpp
        BubbleSort.cpp
        InsertionSort.cpp
        SelectionSort.cpp
        PalindromeCheck.cpp
        CaesarCipherEncryptor.cpp)

add_library(easy ${SOURCES})
