set(SOURCES
        ThreeNumberSum.cpp
        SmallestDifference.cpp
        MoveElementToEnd.cpp
        MonotonicArray.cpp
        SpiralTraverse.cpp
        LongestPeak.cpp
        ConstructionBST.cpp
        ValidateBST.cpp
        TraversalBST.cpp
        MinHeightBST.cpp
        InvertBinaryTree.cpp
        )

add_library(medium ${SOURCES})
